# fabl-js

./: README  README.md  beautify.bat  build.bat  install.html  license.html  minify.bat  package.json
fimp/: analyze.fbl  arith.fbl  asm.fbl  build.fbl  buildJS.fbl  cgi.fbl  class.fbl  date.fbl  debug.fbl  disasm.fbl  fglobals.fbl  flat.fbl  flat2.fbl  fun.fbl  functionals.fbl  genimports.fbl  globals.fbl  hex.fbl  hexbinary.fbl  home.fbl  imports.fbl  label.fbl  literal.fbl  load.fbl  macros.fbl  main.c  meta.fbl  namespace.fbl  parse.fbl  pcode.fbl  plussup.fbl  primops.fbl  printers.fbl  props.fbl  qsort.fbl  raptor.fbl  raptor.v10.fbl  rdfio.fbl  scan.fbl  serialize.fbl  (+10 more)
lib/: discovery-1.1.fb  dublin_core-1.1.fb  foaf-0.1-1.fb  geom-1.1-1.fb  geom2d-1.1-1.fb  libgeom2d-1.1-1.fb  rdfig_geo-2003-01.fb  rss-1.0.fb
libsrc/: discovery-1.1.fbl  dublin_core-1.1-1.fbl  geom-1.1-1-1.fbl  geom2d-1.1-1-1.fbl  rdfig_geo-2003-01-1.fbl  rss-1.0-1.fbl
libsrc/libgeom2d-1.1-1/: box.v0.fbl  build.v0.fbl  matrix.v0.fbl  points.v0.fbl
source/: Makefile.am  append.c  bootstrap.c  callc.c  compactob.c  dblock.c  fun.h  globals.c  globals.h  hash.c  hashtable.c  heap.c  heap.h  hetarray.c  imports.c  includes.h  init.c  io.c  isock.c  list.c  macros.h  main.c  obops.c  pcode.c  pcode.h  persist.c  pm.c  pmstack.c  pmstate.c  raptor.c  raptor.h  rdfinit.c  seqbyte.c  seqdouble.c  seqint.c  seqob.c  serial.c  serialize.c  serialize.h  serialize.sv.c  (+10 more)
